openecomp-be/lib/openecomp-tosca-lib/src/test/resources/vspmanager.csar/manifest/invalid/metadata-no-value.mf
metadata:
  vnf_product_name: vPP
  vnf_provider_id